--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,5 +7,7 @@
 
 <div class="container">
     <p class="lead">Learn more about OAA</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/hI7seVtUeZo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div class="responsive-video">
+        <iframe src="https://www.youtube.com/embed/hI7seVtUeZo?rel=0" allow="autoplay; encrypted-media" allowfullscreen><p>Your browser does not support embeddable frames.  Please enable embeddable frames in your browser, upgrade your browser or go <a href="https://www.youtube.com/watch?v=hI7seVtUeZo" target="_blank" rel="noopener">here</a> to view this content.</p></iframe>
+    </div>
 </div>
