--- a/client/app/tournament/tournament.html
+++ b/client/app/tournament/tournament.html
@@ -1,4 +1,109 @@
-<div class="container">
-    <h1>Open Angel Tournament</h1>
-    <h2>Date: 03 March 2018</h2>
+<div class="row centered-form center-block">
+  <div class="container">
+    <h1 class="text-center">Open Angel Arena Tournament</h1>
+    <h2 class="text-center">The Open Angel Arena team is proud to announce the Open Angel Arena Anniversary Tournament, a custom game tournament
+      with a $10,000+ Prize Pool.</h2>
+    <p>Yes, you read that right. Last weekend we had a fundraiser for our tournament and we were hoping to raise $500.
+      <b>We ended up with $10,349! 100% of that money is going towards the tournaments prize pool.</b>
+    </p>
+    <ul>
+      <li>The tournament will take place on the 3rd and 4th of March, starting at 3pm Berlin Time both days.</li>
+      <li>We currently plan on hosting the tournament for 32 teams. Should enough teams sign up then we might expand the tournament
+        to a 64 team bracket.</li>
+      <li>
+        <a href="https://docs.google.com/document/d/1YJj_oRRLvmC6zvKQxBmg4yDZVesrJOqjJokESea2tIM/edit?usp=sharing">Link to the rules!</a>
+      </li>
+      <li>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeOVXbT1gyXzOEQDL2sEFQ1mD_sz08Y9NmRnMVziN7FTNBjZQ/viewform">Link to the sign up!</a> Sign ups close Feb. 10th.</li>
+      <li>The prize pool will be split as follows: First place: 50%; Second place: 25%; Third places: 12.5%</li>
+    </ul>
+    <p>Join the
+      <a href="https://discord.gg/9ApbMyW">Community Discord</a> to find a team for the tournament and to play games with the best players!</p>
+    <h3>Where do I watch?</h3>
+    <p>The tournament will be streamed on
+      <a href="https://www.twitch.tv/l34Um1">Baumi's twitch channel</a> but we'll make another announcement the day of the tournament.</p>
+    <p>We are also happy to have other streamers cast tournament matches or have players stream their games. Feel free to contact
+      us if we can be of assistance.</p>
+    <h2 class="text-center">What is Open Angel Arena?</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=1jaGleeqKvw">Trailer!</a>
+      </li>
+      <li>
+        <a href="https://youtu.be/BXsSy65mSnk">How to play!</a> (5 minutes)</li>
+      <li>
+        <a href="https://youtu.be/hI7seVtUeZo">How to play and design discussion!</a> (52 minutes)</li>
+      <li>
+        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=513926896">Workshop Page!</a>
+      </li>
+      <li>
+        <a href="https://youtu.be/-Nu8FXF9DGg">Video of a competitive game of OAA</a>
+      </li>
+    </ul>
+    <p>Open Angel Arena is a modern reimagining of the classic Angel Arena game mode. It was made by a group of passionate Angel
+      Arena players that grew unhappy with the current iterations on the workshop. So we took it into our own hands to remake
+      the game from scratch, revisiting old features while modernizing and streamlining the gameplay. It is a highly competitive
+      game and there is a lot to learn. If you plan on joining the tournament I recommend you start practicing soon.</p>
+
+    <ul>
+      <li>
+        <strong>Most heroes are viable</strong>, including supports, casters and tanks. In fact, supports are absolutely essential
+        to many strategies.</li>
+      <li>
+        <strong>All items are upgradeable</strong>. This allows for a wide range of possible item builds and for an even wider range
+        of possible strategies. Have you ever wanted to play attack damage Elder Titan using the 100% lifesteal talent or
+        use Lunas ultimate to rain death and stuns on an entire team? In Open Angel Arena these strategies are not only possible
+        but actually viable. </li>
+      <li>
+        <strong>New custom items</strong>, designed by the community and carefully balanced before being added.</li>
+      <li>
+        <strong>Bosses have been redesigned to be an integral part of the game and have been made more interesting</strong>. To upgrade
+        items you have to kill bosses, often as early as 10 minutes into the game and then regularly for the rest of the
+        match. A killed boss respawns as a new, stronger boss with new abilities. Bosses in OAA have various mechanics that
+        you will have to deal with while battling them and aren’t simple DPS tanks.</li>
+      <li>
+        <strong>Duels have been redesigned to include objectives that encourage players to fight and enable objective based gameplay</strong>.
+        There are multiple different duel arenas that you can be placed into and you will always be playing in a duel. If
+        there is a 1v1 in one arena there is also a 4v4 in a different one and so on.</li>
+      <li>To win the game you must win a Final Duel.
+        <strong>The first team to 100 points will trigger a Final Duel. The team with 100 points then needs to win this Final Duel
+          to win the game</strong>. If they don’t then the games score limit gets extended by 10, putting it into overtime.
+        This goes on until a team wins a Final Duel.</li>
+      <li>Fountain camping has been eliminated from the game.</li>
+      <li>
+        <a href="https://soundcloud.com/user-238514931">Our custom music is amazing!</a>
+      </li>
+    </ul>
+
+    <p>Open Angel Arena is an open source project. There's lots of cool stuff we have designed, if you'd like to help create
+      them, check out
+      <a href="https://github.com/OpenAngelArena/oaa">our GitHub</a>. We are always looking for new people to help with the game. It’s a fun experience and if you are a
+      new developer the best experience you can get is to simply work on a game. If you work on Open Angel Arena you can
+      also get feedback on your work by professional developers. You can find the developer discord in the installation instructions
+      on GitHub.</p>
+
+    <p>We look forward to having you play in the Open Angel Arena Anniversary Tournament and even if you don't play we hope
+      you enjoy watching it!</p>
+
+    <h3>What's happening until then?</h3>
+
+    <ul>
+      <li>We are still working on the game and a few small features will be added before the tournament. The balance of the game
+        will also be adjusted mildly. But these changes will be made a reasonable time ahead of the tournament so you have
+        at least a few weeks to practice.</li>
+      <li>We will soon release our
+        <a href="https://docs.google.com/document/d/19A8S42MtunAp7q9YHn7u3drwlc26rzyDO6iRoI0p5YY/">first custom hero</a>. This hero will not be allowed in the tournament, so don't worry about that. But if you feel
+        like giving some feedback on the guy that would be great and very helpful.</li>
+      <li>In all likelihood we are going to be hosting a second fundraiser soon. This time not all money will go to the prize
+        pool but instead we want to use some of the donations to help push the development of the game by using it for bug
+        bounties and administrative fees like running the website. Donations from this second fundraiser will receive ingame
+        rewards through our upcoming free Bottlepass. The fundraiser will be held on my
+        <a href="https://www.twitch.tv/l34Um1">twitch channel</a>.</li>
+      <li>We have our version of a Battlepass, the Bottlepass, releasing soon. This will include MMR and unlockable cosmetics,
+        some custom made.</li>
+    </ul>
+
+    <h3 class="text-center">We hope you'll give our game a shot. Lots of great and passionate people have worked hard to make it a truly fun and
+      competitive experience!</h3>
+  </div>
 </div>
