--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,13 +1,81 @@
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Welcome to Open Angel Arena</h1>
+    <h1>Open Angel Arena</h1>
     <img src="https://github.com/OpenAngelArena/oaa/blob/master/docs/.images/logo.png?raw=true" alt="I'm OAA">
+    <h3>We are currently hosting a 10000$ tournament, click
+      <a href="/tournament">here</a> to check it out</h3>
   </div>
 </header>
 
 <div class="container">
-    <p class="lead">Learn more about OAA</p>
-    <div class="responsive-video">
-        <iframe src="https://www.youtube.com/embed/hI7seVtUeZo?rel=0" allow="autoplay; encrypted-media" allowfullscreen><p>Your browser does not support embeddable frames.  Please enable embeddable frames in your browser, upgrade your browser or go <a href="https://www.youtube.com/watch?v=hI7seVtUeZo" target="_blank" rel="noopener">here</a> to view this content.</p></iframe>
-    </div>
+  <h2 class="text-center">What is Open Angel Arena?</h2>
+  <div class="responsive-video">
+    <iframe src="https://www.youtube.com/embed/hI7seVtUeZo?rel=0" allow="autoplay; encrypted-media" allowfullscreen>
+      <p>Your browser does not support embeddable frames. Please enable embeddable frames in your browser, upgrade your browser
+        or go
+        <a href="https://www.youtube.com/watch?v=hI7seVtUeZo" target="_blank" rel="noopener">here</a> to view this content.</p>
+    </iframe>
+  </div>
+  <ul>
+    <li>
+      <a href="https://www.youtube.com/watch?v=1jaGleeqKvw">Trailer!</a>
+    </li>
+    <li>
+      <a href="https://youtu.be/BXsSy65mSnk">How to play!</a> (5 minutes)</li>
+    <li>
+      <a href="https://youtu.be/hI7seVtUeZo">How to play and design discussion!</a> (52 minutes)</li>
+    <li>
+      <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=513926896">Workshop Page!</a>
+    </li>
+    <li>
+      <a href="https://youtu.be/-Nu8FXF9DGg">Video of a competitive game of OAA</a>
+    </li>
+  </ul>
+  <p>Open Angel Arena is a modern reimagining of the classic Angel Arena game mode. It was made by a group of passionate Angel
+    Arena players that grew unhappy with the current iterations on the workshop. So we took it into our own hands to remake
+    the game from scratch, revisiting old features while modernizing and streamlining the gameplay. It is a highly competitive
+    game and there is a lot to learn. If you plan on joining the tournament I recommend you start practicing soon.</p>
+
+  <ul>
+    <li>
+      <strong>Most heroes are viable</strong>, including supports, casters and tanks. In fact, supports are absolutely essential
+      to many strategies.</li>
+    <li>
+      <strong>All items are upgradeable</strong>. This allows for a wide range of possible item builds and for an even wider range
+      of possible strategies. Have you ever wanted to play attack damage Elder Titan using the 100% lifesteal talent or use
+      Lunas ultimate to rain death and stuns on an entire team? In Open Angel Arena these strategies are not only possible
+      but actually viable. </li>
+    <li>
+      <strong>New custom items</strong>, designed by the community and carefully balanced before being added.</li>
+    <li>
+      <strong>Bosses have been redesigned to be an integral part of the game and have been made more interesting</strong>. To upgrade
+      items you have to kill bosses, often as early as 10 minutes into the game and then regularly for the rest of the match.
+      A killed boss respawns as a new, stronger boss with new abilities. Bosses in OAA have various mechanics that you will
+      have to deal with while battling them and aren’t simple DPS tanks.</li>
+    <li>
+      <strong>Duels have been redesigned to include objectives that encourage players to fight and enable objective based gameplay</strong>.
+      There are multiple different duel arenas that you can be placed into and you will always be playing in a duel. If there
+      is a 1v1 in one arena there is also a 4v4 in a different one and so on.</li>
+    <li>To win the game you must win a Final Duel.
+      <strong>The first team to 100 points will trigger a Final Duel. The team with 100 points then needs to win this Final Duel
+        to win the game</strong>. If they don’t then the games score limit gets extended by 10, putting it into overtime.
+      This goes on until a team wins a Final Duel.</li>
+    <li>Fountain camping has been eliminated from the game.</li>
+    <li>
+      <a href="https://soundcloud.com/user-238514931">Our custom music is amazing!</a>
+    </li>
+  </ul>
+
+  <p>Open Angel Arena is an open source project. There's lots of cool stuff we have designed, if you'd like to help create them,
+    check out
+    <a href="https://github.com/OpenAngelArena/oaa">our GitHub</a>. We are always looking for new people to help with the game. It’s a fun experience and if you are a new
+    developer the best experience you can get is to simply work on a game. If you work on Open Angel Arena you can also get
+    feedback on your work by professional developers. You can find the developer discord in the installation instructions
+    on GitHub.</p>
+
+  <p>We look forward to having you play in the Open Angel Arena Anniversary Tournament and even if you don't play we hope you
+    enjoy watching it!</p>
+
+  <h3 class="text-center">We hope you'll give our game a shot. Lots of great and passionate people have worked hard to make it a truly fun and competitive
+    experience!</h3>
 </div>
